--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -12,6 +12,8 @@
       grid-template-columns: repeat(4, 25%);
       max-width: 1200px;
       margin: auto;
+      gap:5px;
+      font-family: 'Open Sans', sans-serif;
 
       & > div:first-child{
         @media #{$info-tablet-horizontal} {
@@ -57,7 +59,7 @@
           font-weight: 400;
           font-size: 13px;
           line-height: 2;
-          padding-bottom: 15px;
+          padding-bottom: 10px;
           display: block;
           transition: .4s;
           transition: .4s all;
@@ -119,7 +121,6 @@
       .footer-input{
         position: relative;
         margin: 5px 0 30px 0;
-        padding-right: 20px;
       
         input{
           height: 45px;
@@ -135,7 +136,7 @@
       img{
         position: absolute;
         top: 36%;
-        right: 15%;
+        right: 10%;
         cursor: pointer;
         // @media #{$info-tablet-horizontal} {
         //   right: 7%;
@@ -163,7 +164,7 @@
       // }
       .footer-border-left{
         border-left: 1px solid #177e72;
-        padding-left: 15px;
+        padding: 0 22px;
       }
       .footer-black{
         color: #000;
