--- a/assets/scss/page/_main-brandi.scss
+++ b/assets/scss/page/_main-brandi.scss
@@ -37,6 +37,9 @@
       font-family: 'Open Sans', sans-serif;
       width:90%;
       padding-left: 20px;
+      @media #{$info-phone} {
+        padding-left: 10px;
+      }
       
       h2{
         font-weight: 600;
@@ -204,6 +207,9 @@
   @media #{$info-tablet-horizontal} {
     width: calc(100%/3);
   }
+  @media #{$info-phone} {
+    width: calc(100%/2);
+  }
   
   &:hover{
     .works__content-hover{
@@ -346,7 +352,7 @@
     img{
       padding: 45px;
       @media #{$info-phone} {
-        padding: 28px;
+        padding: 25px;
       }
     }
     h3{
@@ -354,7 +360,7 @@
       font-weight: 600;
       margin: 40px 0 10px 0;
       @media #{$info-phone} {
-        font-size: 40px;
+        font-size: 35px;
         margin: 20px 0 10px 0;
       }
     }
